<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37474f"
    tools:context="com.example.theeagler.ironlock.ChangePattern">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/confirm_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:hint="@string/hint_retype_user_name"
            android:lines="1"
            android:paddingBottom="@dimen/margin"
            android:paddingTop="@dimen/margin"
            android:textAlignment="center"
            android:textColor="#bdbdbd"
            android:textSize="@dimen/textSize4"

            />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/shape"
            android:hint="@string/hint_retype_password"
            android:inputType="numberPassword"
            android:lines="1"
            android:paddingBottom="@dimen/margin"
            android:paddingTop="@dimen/margin"
            android:textAlignment="center"
            android:textColor="#bdbdbd"
            android:textSize="@dimen/textSize4"

            />
    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin2"
        android:background="#37474f"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:text="@string/next_button"
        android:textColor="#bdbdbd"
        android:textSize="@dimen/textSize" />

</RelativeLayout>



